# mc-frontend

./: Cargo.toml  Dockerfile
config/: conf.toml
src/: deaths.rs  logs.rs  main.rs  mods.rs
templates/: index.html
templates/deaths/: index.html
templates/maps/: index.html
templates/mods/: index.html
