[package]
name = "mc-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
axum = "0.8.7"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.43"
