[package]
name = "mc-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
axum = "0.8.7"
chrono = "0.4.42"
config = "0.15.19"
flate2 = "1.1.5"
futures = "0.3"
glob = "0.3.3"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zip = "7.0.0"
